\name{NEWS}
\title{NEWS for WeMix}

\section{Changes in version 3.2.1}{
  \subsection{IMPROVEMENTS}{
    \itemize{
      \item When estimating the standard errors, the evaluation of the Jacobian was further optimized. Internal tests show a speedup between zero and thirty percent per model fit.
    }
  }
  \subsection{BUG FIXES}{
    \itemize{
      \item In a three-level linear model, when \code{cWeights=TRUE}, the weights were incorrectly adjusted. This has been fixed.
    }
  }
}

\section{Changes in version 3.2.0}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{mix} was not returning on some data that was unsorted, and the function was made more robust to unsorted data.
      \item \code{mix} used to drop rows if they had an \code{NA} on any column, regardless of if it was used in the model. Now it first forms a model frame with the relevant rows before doing this. Thank you to Bernhard Clemm von Hohenberg for pointing out this bug. From https://github.com/American-Institutes-for-Research/WeMix/issues/2.
    }
  }
  \subsection{DOCUMENTATION}{
    \itemize{
      \item The documentation for the \code{weights} variable has been improved to indicate what order to put the weights in. Thank you to Bernhard Clemm von Hohenberg for pointing out the possible confusion.
    }
  }
}


\section{Changes in version 3.1.9}{
  \subsection{IMPROVEMENTS}{
    \itemize{
      \item a possible speed up in the solver for linear models uses \code{rbind2} in preference to \code{rbind}
      \item The error code when a single weight was passed was unclear. Thank you to Zerleen Quader for identifying this issue.
    }
  }
}

\section{Changes in version 3.1.8}{
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{mix} now works with factor outcomes in a binomial model.
      \item \code{mix} now works with factor IDs.