@@ -17,7 +17,7 @@
       </button>
       <span class="navbar-brand">
         <a class="navbar-link" href="index.html">WeMix</a>
-        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">3.2.1</span>
+        <span class="version label label-default" data-toggle="tooltip" data-placement="bottom" title="">3.2.1.9000</span>
       </span>
     </div>
 
@@ -98,14 +98,14 @@
     <p>Bailey P, Kelley C, Nguyen T, Huo H (2021).
 <em>WeMix: Weighted Mixed-Effects Models Using Multilevel Pseudo Maximum
 Likelihood Estimation</em>.
-R package version 3.2.1, <a href="https://american-institutes-for-research.github.io/WeMix/" class="external-link">https://american-institutes-for-research.github.io/WeMix/</a>. 
+R package version 3.2.1.9000, <a href="https://american-institutes-for-research.github.io/WeMix/" class="external-link">https://american-institutes-for-research.github.io/WeMix/</a>. 
 </p>
     <pre>@Manual{,
   title = {WeMix: Weighted Mixed-Effects Models Using Multilevel Pseudo Maximum
 Likelihood Estimation},
   author = {Paul Bailey and Claire Kelley and Trang Nguyen and Huade Huo},
   year = {2021},
-  note = {R package version 3.2.1},
+  note = {R package version 3.2.1.9000},
   url = {https://american-institutes-for-research.github.io/WeMix/},
 }</pre>
 
