@@ -4,5 +4,5 @@ pkgdown_sha: ~
 articles:
   Introduction_to_Mixed_Effects_Models_With_WeMix: Introduction_to_Mixed_Effects_Models_With_WeMix.html
   Weighted_Linear_Mixed_Effects_Models: Weighted_Linear_Mixed_Effects_Models.html
-last_built: 2021-12-09T04:22Z
+last_built: 2021-12-12T20:50Z
 
